Fixed completed packs on player profiles attempting to hide behind padding (version 1.51)

--- a/css/pages/leaderboard.css
+++ b/css/pages/leaderboard.css
@@ -90,7 +90,8 @@
     display: flex;
     flex-wrap: wrap;
     gap: 0.4em;
-    margin-left: 14%;
+    margin-left: 12%;
+    margin-right: 12%;
     scale: 1.3;
 }
 .page-leaderboard .player .packs .tag {
